--- a/r/rp/rpg/rpgfan.com.html
+++ b/r/rp/rpg/rpgfan.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the rpgfan.com privacy policy that was archived on 2018-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181226162127id_/http%3A//www.rpgfan.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rpgfan.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607063434id_/http%3A//www.rpgfan.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><link rel="stylesheet" href="/rpgfan.css" type="text/css">
 
 <title>RPGFan - Legal Info and Privacy Policy</title>
-<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css"><script type="text/javascript" async="" src="https://cse.google.com/cse.js?cx=004567197636733453949:kqs4_bxfc4q"></script><script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script><script>
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css"><script type="text/javascript" async="" src="//cse.google.com/cse.js?cx=004567197636733453949:kqs4_bxfc4q"></script><script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script><script>
 window.addEventListener("load", function(){
 window.cookieconsent.initialise({
   "palette": {
@@ -22,8 +22,17 @@ window.cookieconsent.initialise({
     "href": "/privacy.html"
   }
 })});
+</script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-139514872-1"></script><script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139514872-1');
 </script></head>
 
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
 
 
 
@@ -48,7 +57,7 @@ img, div, td { behavior: url(/iepngfix.htc) }
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    gcse.src = '//cse.google.com/cse.js?cx=' + cx;
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(gcse, s);
   })();
@@ -76,20 +85,20 @@ img, div, td { behavior: url(/iepngfix.htc) }
 
 <table width="950" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr>
-<td align="left" height="80"><h1 style="display:inline;margin:0;padding:0;line-height:1em;"><a href="http://www.rpgfan.com/"><img src="/graphics/logo-20.svg" alt="RPGFan" border="0"></a></h1></td>
+<td align="left" height="80"><h1 style="display:inline;margin:0;padding:0;line-height:1em;"><a href="http://www.rpgfan.com/"><img src="/graphics/logo-2019.svg" alt="RPGFan" border="0"></a></h1></td>
 <td align="right" valign="middle" height="80">
 
 
-<!-- <div style="float:left;margin-top:-5px;margin-right:-100px;"><a href="http://www.rpgfan.com/news/2018/8411.html"><img src="/graphics/Extra-Life-Header.png" border="0" alt="RPGFan + Extra Life"></a></div> -->
+<!--<div style="float:left;margin-top:-5px;margin-right:-100px;"><a href="#"><img src="/graphics/Hiring-Header.png" alt="Now Hiring: Social Media"></a></div>-->
 
 
 <div class="social-container">
-	<a href="https://www.facebook.com/rpgfancom/" target="_blank" class="social-fb" alt="Facebook" title="Facebook"></a>
-	<a href="https://twitter.com/rpgfancom" target="_blank" class="social-twitter" alt="Twitter" title="Twitter"></a>
-	<a href="https://www.instagram.com/rpgfancom/" target="_blank" class="social-instagram" alt="Instagram" title="Instagram"></a>
-	<a href="https://discord.gg/qvhbwZv" target="_blank" class="social-discord" alt="Discord" title="Discord"></a>
-	<a href="https://www.youtube.com/rpgfancom" target="_blank" class="social-youtube" alt="YouTube" title="YouTube"></a>
-	<a href="https://www.twitch.tv/rpgfancom" target="_blank" class="social-twitch" alt="Twitch" title="Twitch"></a>
+	<a href="//www.facebook.com/rpgfancom/" target="_blank" class="social-fb" alt="Facebook" title="Facebook"></a>
+	<a href="//twitter.com/rpgfancom" target="_blank" class="social-twitter" alt="Twitter" title="Twitter"></a>
+	<a href="//www.instagram.com/rpgfancom/" target="_blank" class="social-instagram" alt="Instagram" title="Instagram"></a>
+	<a href="//discord.gg/qvhbwZv" target="_blank" class="social-discord" alt="Discord" title="Discord"></a>
+	<a href="//www.youtube.com/rpgfancom" target="_blank" class="social-youtube" alt="YouTube" title="YouTube"></a>
+	<a href="//www.twitch.tv/rpgfancom" target="_blank" class="social-twitch" alt="Twitch" title="Twitch"></a>
 </div>
 
 <br>
@@ -110,7 +119,7 @@ img, div, td { behavior: url(/iepngfix.htc) }
 <li><h2><a href="/pics.html">Media</a></h2></li>
 <li><h2><a href="/soundtracks1.html">RPGFan Music</a></h2></li>
 <li><h2><a href="/podcast.html">Podcasts</a></h2></li>
-<li><h2><a href="https://discord.gg/qvhbwZv" target="_blank">Discord</a></h2></li>
+<li><h2><a href="//discord.gg/qvhbwZv" target="_blank">Discord</a></h2></li>
 <li><h2><a href="/boards/index.php">Forums</a></h2></li>
 <li><h2><a href="/features.html">Features</a></h2></li>
 <li><h2><a href="/staff.html">About</a></h2></li>
@@ -268,7 +277,7 @@ img, div, td { behavior: url(/iepngfix.htc) }
 
 
 
-<br><br>
+ <br><br>
 
 </td>
 <td width="325" align="center" valign="top" class="sitesidebar">
@@ -293,55 +302,55 @@ img, div, td { behavior: url(/iepngfix.htc) }
 	<div class="stream_container">
 		<div class="stream_header">Twitch Schedule &amp; Status</div>
 
-		<iframe src="http://streambadge.com/twitch/custom/222222/f3df61/ffffff/rpgfancom/" style="border:none;height:4em;width:100%"></iframe>
+		<iframe src="//streambadge.com/twitch/custom/222222/f3df61/ffffff/rpgfancom/" style="border:none;height:4em;width:100%"></iframe>
 
-		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Sunday, December 23rd</a>
-			<br><span>Hatoful Boyfriend Holiday Star w/Kat • 10am PDT/1pm EDT</span>
+		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Sundays</a>
+			<br><span>June 2: Radiata Stories w/Kyle • 10am PDT/1pm EDT</span>
 		</p>
 
 		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Mondays</a>
-			<br><span>Darksiders w/Maxx • 12pm PDT/3pm EDT
-			<br>Digimon Story: Cyber Sleuth - Hacker's Memory w/Kat • 3pm PDT/6pm EDT</span>
+			<br><span>Suikoden II w/Maxx • 12pm PDT/3pm EDT
+			<br>Golden Sun w/Kat • 4pm PDT/7pm EDT</span>
 		</p>
 
 		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Tuesdays</a>
-			<br><span>Kingdom Hearts: Dream Drop Distance w/Kyle • 3pm PDT/6pm EDT
-			<br>Breath of Fire III w/Scott • 7pm PDT/10pm EDT</span>
+			<br><span>Final Fantasy VIII w/Kyle • 3pm PDT/6pm EDT
+			<br>Valkyrie Profile 2 w/Scott • 7pm PDT/10pm EDT</span>
 		</p>
 
 		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Wednesdays</a>
-			<br><span>Breath of Fire III w/Scott • 7pm PDT/10pm EDT</span>
+			<br><span>Valkyrie Profile 2 w/Scott • 7pm PDT/10pm EDT</span>
 		</p>
 
 		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Thursdays</a>
-			<br><span>Kingdom Hearts: Dream Drop Distance w/Kyle • 3pm PDT/6pm EDT
-			<br>Breath of Fire III w/Scott • 7pm PDT/10pm EDT</span>
+			<br><span>Golden Sun w/Kat • 4pm PDT/7pm EDT
+			<br>Valkyrie Profile 2 w/Scott • 7pm PDT/10pm EDT</span>
 		</p>
 
 		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Fridays</a>
-			<br><span>Fire Emblem: Path of Radiance w/Kat • 3pm PDT/6pm EDT
-			<br>Friday Super Variety Night w/Scott • 7pm PDT/10pm EDT</span>
+			<br><span>Super Robot Wars X w/Kyle • 3pm PDT/6pm EDT
+			<br>Final Fantasy V - Career Day (Randomizer) w/Scott • 7pm PDT/10pm EDT</span>
 		</p>
 
-		<p><a href="http://www.twitch.tv/rpgfancom" target="_blank">Saturdays</a>
-			<br><span>Breath of Fire III w/Scott • 5pm PDT/8pm EDT</span>
+		<p><a href="https://www.twitch.tv/rpgfancom" target="_blank">Saturdays</a>
+			<br><span>Trails of Cold Steel (Nightmare Mode) w/Scott • 3pm PDT/6pm EDT</span>
 		</p>
 	</div>
 
 
 <!--Featured Menu Start-->
 
-	<a href="/news/2018/8583.html" class="fpic_box"><img src="/updatepics/podcast/Random-156.jpg" alt="Random Encounter 156"><h4>Random Encounter 156</h4><h5>Podcast</h5></a>
+	<a href="/news/2019/9179.html" class="fpic_box"><img src="/updatepics/podcast/Retro-191.jpg" alt="Retro Encounter 191: Castlevania: Symphony of the Night Revisited"><h4>Retro Encounter 191: Castlevania: Symphony of the Night Revisited</h4><h5>Podcast</h5></a>
 
-	<a href="/reviews/World_of_Final_Fantasy_Maxima/index.html" class="fpic_box"><img src="/updatepics/main/World-Of-Final-Fantasy-Maxima.jpg" alt="World of Final Fantasy Maxima Review"><h4>World of Final Fantasy Maxima</h4><h5>Review</h5></a>
+	<a href="/reviews/Dragon_Star_Varnir/index.html" class="fpic_box"><img src="/updatepics/main/Dragon-Star-Varnir.jpg" alt="Dragon Star Varnir Review"><h4>Dragon Star Varnir</h4><h5>Review</h5></a>
 
-	<a href="/features/RPG-Winter-Adventures/" class="fpic_box"><img src="/features/RPG-Winter-Adventures/images/headline.jpg" alt="RPG Winter Adventures Special Feature"><h4>RPG Winter Adventures</h4><h5>Special Feature</h5></a>
+	<a href="/reviews/Yakuza_Kiwami_2/index2.html" class="fpic_box"><img src="/updatepics/main/Yakuza-Kiwami-2.jpg" alt="Yakuza Kiwami 2 Review"><h4>Yakuza Kiwami 2</h4><h5>Review</h5></a>
 
-	<a href="/reviews/Jake_Hunter_Detective_Story_Ghost_of_the_Dusk/index.html" class="fpic_box"><img src="/updatepics/main/Jake-Hunter-Detective-Story-Ghost-of-the-Dusk.jpg" alt="Jake Hunter Detective Story: Ghost of the Dusk Review"><h4>Jake Hunter Detective Story: Ghost of the Dusk</h4><h5>Review</h5></a>
+	<a href="/news/2019/9161.html" class="fpic_box"><img src="/updatepics/podcast/Random-165.jpg" alt="Random Encounter 165: To New Horizons"><h4>Random Encounter 165: To New Horizons</h4><h5>Podcast</h5></a>
 
-	<a href="/news/2018/8570.html" class="fpic_box"><img src="/updatepics/podcast/Retro-167.jpg" alt="Retro Encounter 167"><h4>Retro Encounter 167</h4><h5>Podcast</h5></a>
+	<a href="/reviews/Psychedelica_of_the_Black_Butterfly/index.html" class="fpic_box"><img src="/updatepics/main/Psychedelica-of-the-Black-Butterfly.jpg" alt="Psychedelica of the Black Butterfly Review"><h4>Psychedelica of the Black Butterfly</h4><h5>Review</h5></a>
 
-<!--Featured Menu End-->	
+	<!--Featured Menu End-->	
 
 
 
@@ -374,7 +383,7 @@ img, div, td { behavior: url(/iepngfix.htc) }
 
 
 
-<ul class="footer_menu">© 1998-2018 RPGFan Media, LLC 
+<ul class="footer_menu">© 1998-2019 RPGFan Media, LLC 
 	<li><a href="/privacy.html">Legal &amp; Privacy Policy</a></li>
 	<li><a href="/staff.html">Contact Us</a></li>
 	<li><a href="/working-with-us.html">Working With Us</a></li>
@@ -384,9 +393,9 @@ img, div, td { behavior: url(/iepngfix.htc) }
 </ul>
 
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+var gaJsHost = (("https:" == document.location.protocol) ? "//ssl." : "//www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+</script><script src="//ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
 try {
 var pageTracker = _gat._getTracker("UA-2332993-1");
@@ -399,9 +408,9 @@ _qoptions={
 qacct:"p-2c8bv5msM-hec"
 };
 </script>
-<script type="text/javascript" src="https://edge.quantserve.com/quant.js"></script>
+<script type="text/javascript" src="//edge.quantserve.com/quant.js"></script>
 <noscript>
-<img src="https://pixel.quantserve.com/pixel/p-2c8bv5msM-hec.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+<img src="//pixel.quantserve.com/pixel/p-2c8bv5msM-hec.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
 </noscript>
 <!-- End Quantcast tag -->
 
