--- a/t/te/tem/templett.com.html
+++ b/t/te/tem/templett.com.html
@@ -1,15 +1,20 @@
-<!--The following is the downloaded HTML source of the templett.com privacy policy that was archived on 2017-03-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170302132331id_/http%3A//templett.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the templett.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607064702id_/https%3A//templett.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="admin/assets/img/favicon.ico">
-      <title>Templett | Privacy Policy</title>
-      <link rel="canonical" href="/privacy-policy.php">
-      <meta name="description" content="Last updated: March 21, 2016">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+    <title>Templett | Privacy Policy</title>
+    <link rel="canonical" href="/privacy-policy">
+    <meta name="description" content="Last updated: May 23, 2018">
     <meta name="p:domain_verify" content="973d08e2288cc3801a2683a4f59ccf39">
     <link rel="stylesheet" type="text/css" href="admin/assets/lib/stroke-7/style.css">
     <link rel="stylesheet" type="text/css" href="admin/assets/lib/jquery.nanoscroller/css/nanoscroller.css"><!--[if lt IE 9]>
@@ -19,34 +24,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link type="text/css" href="admin/assets/css/style.css" rel="stylesheet">
     <!-- Include needed css depending on which page needs it -->
-     <script async="" src="https://www.google-analytics.com/analytics.js"></script><script>var select2 = false;</script>  
+     <script>var select2 = false;</script>  
      <script>var dataTables = false;</script>      <script>var parsleyValidation = false;</script>     <link rel="stylesheet" href="admin/assets/css/style.css" type="text/css">
     <script src="admin/assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
 
   </head>
-  <body class="f-end">
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-11626417-21', 'auto');
-  ga('send', 'pageview');
-  setTimeout("ga('send', 'event', { eventCategory: '30 seconds on page', eventAction: 'Read' })", 30000);
-
-</script>    <div class="am-wrapper am-nosidebar-left">
+  <body class="f-end" style="">
+        <div class="am-wrapper am-nosidebar-left">
 
 <nav class="navbar navbar-default am-top-header">
   <div class="container-fluid">
     <div class="navbar-header">
-      <div class="page-title"><span>Templett</span></div><a href="#"><span class="icon-bar"><span></span><span></span><span></span></span></a><a href="index.php" class="navbar-brand"></a>
+      <div class="page-title"><span>Templett</span></div><a href="#"><span class="icon-bar"><span></span><span></span><span></span></span></a><a href="https://templett.com/" class="navbar-brand"></a>
     </div><a href="#" data-toggle="collapse" data-target="#am-navbar-collapse" class="am-toggle-top-header-menu collapsed"><span class="icon s7-angle-down"></span></a>
     <div id="am-navbar-collapse" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right am-user-nav">
-                <li><a href="/request-to-sell.php">Sell with Templett</a></li>
+                <li><a href="https://templett.com/sell-with-us">Sell with Templett</a></li>
         <li>
-          <a href="/login.php">
+          <a href="https://templett.com/login">
             <button class="btn btn-info" style="margin: 12px 0px; display: inline-block;">Sign In</button>
           </a>
         </li>
@@ -59,42 +54,78 @@
 </nav>
 
 <div class="am-content">
-	<div class="main-content">
-        <div class="container panel panel-default">
-            <div class="panel-body">
-              <h1 class="text-center">Privacy Policy</h1>
-              <p>Last updated: March 21, 2016</p>
-
-              <p>Templett ("us", "we", or "our") operates http://templett.com&nbsp;(the "Site"). This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.</p>
-
-              <p>We use your Personal Information only for providing and improving the Site. By using the Site, you agree to the collection and use of information in accordance with this policy.</p>
-              <h3>Information Collection And Use</h3>
-              <p>While using our Site, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to your name, email, phone number ("Personal Information").</p>
-              <h3>Log Data</h3>
-              <p>Like many site operators, we collect information that your browser sends whenever you visit our Site ("Log Data").</p>
-
-              <p>This Log Data may include information such as your computer's Internet Protocol ("IP") address, browser type, browser version, the pages of our Site that you visit, the time and date of your visit, the time spent on those pages and other statistics.</p>
-
-              <p>In addition, we may use third party services such as Google Analytics that collect, monitor and analyze this data.</p>
-              <h3>Communications</h3>
-              <p>We may use your Personal Information to contact you with newsletters, marketing or promotional materials and other information that is relevant to your account on the Site.</p>
-              <h3>Cookies</h3>
-              <p>Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your browser from a web site and stored on your computer's hard drive.</p>
-
-              <p>Like many sites, we use "cookies" to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Site.</p>
-              <h3>Security</h3>
-              <p>The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.</p>
-              <h3>Changes To This Privacy Policy</h3>
-              <p>This Privacy Policy is effective as of March 21, 2016&nbsp;and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.</p>
-
-              <p>We reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service after we post any modifications to the Privacy Policy on this page will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.</p>
-
-              <p>If we make any material changes to this Privacy Policy, we will notify you either through the email address you have provided us, or by placing a prominent notice on our website.</p>
-              <h3>Contact Us</h3>
-              <p>If you have any questions about this Privacy Policy, please contact us.</p>
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide page-head-title">
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="admin/assets/img/dashboardview.jpg" style="opacity:0.3;" class="img-responsive">
+          <div class="container">
+            <div class="carousel-caption col-sm-12">
+              <h1>Privacy Policy</h1>
             </div>
+          </div>
         </div>
-	</div>
+      </div>
+    </div>
+    <!-- /.carousel -->
+  <div class="main-content">
+    <div class="container hpad30">
+        <div class="row" "="">
+          <div class="col-md-8 col-md-offset-2">
+            <p>Last updated: May 23, 2018</p>
+
+            <p> At Templett, we care about the privacy of every individual who uses our services and Site. Templett ("us", "we", or "our") operates https://templett.com&nbsp;(the "Site"). Please read this page entirely to learn about our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.</p>
+
+            <p>We use your Personal Information for providing services and improving the Site. By using the Site and the services, you are agreeing to the <a href="https://templett.com/terms-and-conditions">Terms and Conditions</a> and to the collection and use of information in accordance with this policy. If you do not want us to collect or process your Personal Information according to the policy, please do not use the Site or services. We are not responsible for the content or the privacy policies or practices of any of our users, third-party websites, or third-party apps.</p>
+
+            <h3>Information Collection And Use</h3>
+
+            <p>While using our Site, we collect or receive your personal information in a few different ways. We may collect your Personal Information to process an order and provide you with our services. We may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to your name, email, phone number ("Personal Information").</p>
+
+            <p>We provide tools to allow you to correct, update, and remove some of your Personal Information should you choose to. Some of the Personal Information that we collect is required in order to provide you with our services such as a valid email address. Depending on the services you choose to use on our Site, you may be required to provide additional Personal Information. For example, if you are a seller, you will be required to provide credit card details so we can bill you for the fees you inccur while selling. We'll also require you to provide shop details and connect a shop from one or more of the platforms that we support. You also have additional options for promoting your items in Templett and should you choose to use these features, we'll collect information from the products you sell to promote your items to your customers.</p>
+
+            <h3>Automated Information Collection</h3>
+
+            <p>Like many site operators, we collect information that your browser sends whenever you visit our Site ("Log Data").</p>
+
+            <p>This Log Data may include information such as your computer's Internet Protocol ("IP") address, browser type, browser version, the pages of our Site that you visit, the time and date of your visit, the time spent on those pages and other statistics.</p>
+
+            <p>In addition, we may use third party services such as Google Analytics that collect, monitor and analyze this data. This practice helps us to improve the Site and services.</p>
+
+            <h3>Communications</h3>
+
+            <p>We may use your Personal Information to contact you with email newsletters, marketing or promotional materials and other information that is relevant to your account on the Site.</p>
+
+            <h3>Cookies</h3>
+
+            <p>Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your browser from a web site and stored on your computer's hard drive.</p>
+
+            <p>Like many sites, we use "cookies" to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use most portions of our Site. We use cookies to store session information, and visits to the demo feature of our Site.</p>
+
+            <h3>Security</h3>
+
+            <p>The security of your Personal Information is extremely important to us, but remember that no method of transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security. Your account information is protected by a password. It is important that you choose a password carefully and take measures to keep your password and your computer secure to prevent unauthorized access. We recommend logging out when you are done using the services.</p>
+
+            <h3>Retention</h3>
+
+            <p>Templett will retain your information only for as long as is necessary for the purposes set out in this policy, for as long as your account is active to provide our Services to you. If you no longer want Templett to use your information to provide Services to you, please close your account. Templett will retain and use your information to the extent necessary to comply with our legal obligations (for example, if we are required to retain your information to comply with applicable tax/revenue laws), resolve disputes, enforce our agreements, and as otherwise described in this policy. In addition, Templett sellers may also be required to retain and use your information in order to comply with their legal obligations. Please note that closing your account may not free up your email address, username, or shop name (if any) for reuse on a new account.
+
+            </p><h3>Changes To This Privacy Policy</h3>
+
+            <p>This Privacy Policy is effective as of May 23, 2018&nbsp;and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.</p>
+
+            <p>We reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service after we post any modifications to the Privacy Policy on this page will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.</p>
+
+            <p>If we make any material changes to this Privacy Policy, we will notify you either through the email address you have provided us, or by placing a prominent notice on our website.</p>
+
+            <h3>Contact Us</h3>
+
+            <p>If you have any questions about this Privacy Policy, please contact us.</p>
+          </div>
+        </div>
+    </div>
+  </div>
 </div><!-- End page content -->
       <div class="am-content">
         <div class="main-content">
@@ -104,22 +135,23 @@
               <div class="col-sm-4 col-lg-3 col-lg-offset-2">
                 <ul>
                   <li><h4>Sell with Templett</h4></li>
-                  <li><a href="/sellers">Seller Help</a></li>
-                                  </ul>
+                  <li><a href="http://templett.com/sellers">Seller Blog</a></li>
+                  <li><a href="/sell-with-us">Sell with Templett</a></li>
+                </ul>
               </div>
               <div class="col-sm-4 col-lg-3">
                 <ul>
                   <li><h4>More From Templett</h4></li>
-                  <li><a href="/blog">Blog</a></li>
+                  <li><a href="https://help.templett.com" target="_blank">Help Center</a></li>
+                  <li><a href="http://templett.com/blog">Blog</a></li>
                 </ul>
               </div>
               <div class="col-sm-4 col-lg-3">
                 <ul>
                   <li><h4>Follow Templett</h4></li>
                   <li><a href="http://facebook.com/templett"><i class="fa fa-facebook-official" aria-hidden="true"></i> Facebook</a></li>
-                  <li><a href="http://www.instagram.com/templett_/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
-                  <li><a href="https://www.pinterest.com/templett_/"><i class="fa fa-pinterest-p" aria-hidden="true"></i> Pinterest</a></li>
-                </ul>
+                  <li><a href="https://www.youtube.com/channel/UCUnkE10OWKHYyaqHnaPascQ"><i class="fa fa-youtube" aria-hidden="true"></i> YouTube</a></li>
+                                  </ul>
               </div>
           </div>
         </div>
@@ -127,8 +159,8 @@
     </div><!-- end am-wrapper am-nosidebar-left -->
     <div id="footer">
       <div class="container">
-        <p class="text-muted credit col-sm-6">Copyright © 2017 Templett.com. All Rights Reserved.</p>
-        <p class="text-muted credit col-sm-6 text-right"><a href="/index.php">Home</a> | <a href="/terms-and-conditions.php">Terms and Conditions</a> | <a href="/privacy-policy.php">Privacy Policy</a></p>
+        <p class="text-muted credit col-sm-6">Copyright © 2019 Templett.com. All Rights Reserved.</p>
+        <p class="text-muted credit col-sm-6 text-right"><a href="/">Home</a> | <a href="/terms-and-conditions">Terms and Conditions</a> | <a href="/privacy-policy">Privacy Policy</a> | <a href="https://help.templett.com/hc/en-us/requests/new">Contact</a></p>
       </div>
     </div>
 
@@ -158,4 +190,4 @@
       
     </script>
   
-</div></body></html>
+</div><div class="am-scroll-top"></div></body></html>
