--- a/m/me/meg/megamoneymailz.com.html
+++ b/m/me/meg/megamoneymailz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the megamoneymailz.com privacy policy that was archived on 2018-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181204231140id_/http%3A//www.megamoneymailz.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the megamoneymailz.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607092214id_/http%3A//megamoneymailz.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -70,7 +70,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 
 </style>
 <center>
-           <a href="http://megamoneymailz.com/bannerclick.php?id=601" target="_blank"><img src="http://www.relary.com/images/468.png" border="0"></a><br>
+           <a href="http://megamoneymailz.com/bannerclick.php?id=7011" target="_blank"><img src="http://trck.me/291183/banner.jpg" border="0"></a><br>
 	</center><p align="center">
 
 
