just-drinks.com (archived on 2019-06-07)
{
  "alexa_rank": 267507,
  "analysis_subcorpus": true,
  "categories": "alcoholandtobacco;business",
  "char_count": 13123,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.45,
  "homepage_snapshot_redirected_domain": "just-drinks.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190331053944id_/https://www.just-drinks.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190331053944id_/http%3A//just-drinks.com",
  "interval": "2019_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "just-drinks.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190607093010id_/https%3A//www.just-drinks.com/about/privacy.aspx",
  "policy_title": "just-drinks.com: Privacy & Cookies",
  "policy_url": "just-drinks.com/about/privacy.aspx",
  "sha1": "5f9c2227eab710bf8ec60c0c108f4824790629cd",
  "simhash": 12145061054015744040,
  "simhash_updated": false,
  "site_hostname": "just-drinks.com",
  "site_url": "http://just-drinks.com",
  "smog": 14.41,
  "strict_updated": true,
  "timestamp": "20190607093010",
  "word_count": 2136,
  "year": 2019
}

--- a/j/ju/jus/just-drinks.com.html
+++ b/j/ju/jus/just-drinks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the just-drinks.com privacy policy that was archived on 2018-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181222145104id_/https%3A//www.just-drinks.com/about/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the just-drinks.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607093010id_/https%3A//www.just-drinks.com/about/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>just-drinks.com: Privacy &amp; Cookies</title>
@@ -37,7 +37,7 @@ googletag.cmd.push(function () {
 	googletag.enableServices();
 });
 </script>
-<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
+</head>
 <body class="productPad">
 
 <!-- Begin Inspectlet Asynchronous Code -->
@@ -172,10 +172,10 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
 		<p>You can find out more about Google’s position on privacy as regards its analytics service at <a href="https://www.google.co.uk/intl/en/analytics/privacyoverview.html" target="_blank">http://www.google.co.uk/intl/en/analytics/privacyoverview.html</a></p>
 		
 		<p><strong>Third party cookies</strong></p>
-		<p>These are cookies set on your machine by external websites whose services are used on this site. Cookies of this type are the sharing buttons across the site allow visitors to share content onto social networks. Cookies are currently set by LinkedIn, Twitter, Facebook, AdRoll and Google+. In order to implement these buttons, and connect them to the relevant social networks and external sites, there are scripts from domains outside of our website. You should be aware that these sites are likely to be collecting information about what you are doing all around the internet, including on this website.</p>
+		<p>These are cookies set on your machine by external websites whose services are used on this site. Cookies of this type are the sharing buttons across the site allow visitors to share content onto social networks. Cookies are currently set by LinkedIn, Twitter, and Facebook. In order to implement these buttons, and connect them to the relevant social networks and external sites, there are scripts from domains outside of our website. You should be aware that these sites are likely to be collecting information about what you are doing all around the internet, including on this website.</p>
 		<p>You should check the respective policies of each of these sites to see how exactly they use your information and to find out how to opt out, or delete, such information.</p>
-		<p>As you browse this site, advertising cookies will be placed on your computer so that we can understand what you are interested in. Our partners, AdRoll, Facebook, Google, and Twitter, then enable us to present you with retargeting advertising on their sites and other sites based on your previous interaction with this website. The techniques our partners employ do not collect personal information such as your name, email address, postal address or telephone number. </p>
-		<p>You can <a href="https://www.adroll.com/about/privacy" target="_blank">visit this page</a> to opt out of AdRoll and their partners’ targeted advertising, <a href="https://www.facebook.com/ads/website_custom_audiences/" target="_blank">this page</a> to opt out of Facebook’s customised advertising,  <a href="https://www.google.com/settings/u/0/ads/authenticated" target="_blank">this page</a> to opt out of Google's customised advertising, and <a href="https://support.twitter.com/articles/20169453" target="_blank">this page</a> to opt out of Twitter customised advertising using the ‘Do Not Track’ protocol.</p>
+		<p>As you browse this site, advertising cookies will be placed on your computer so that we can understand what you are interested in. Our partners, Facebook, Google, and Twitter, then enable us to present you with retargeting advertising on their sites and other sites based on your previous interaction with this website. The techniques our partners employ do not collect personal information such as your name, email address, postal address or telephone number. </p>
+		<p>You can visit <a href="https://www.facebook.com/ads/website_custom_audiences/" target="_blank">this page</a> to opt out of Facebook’s customised advertising,  <a href="https://www.google.com/settings/u/0/ads/authenticated" target="_blank">this page</a> to opt out of Google's customised advertising, and <a href="https://support.twitter.com/articles/20169453" target="_blank">this page</a> to opt out of Twitter customised advertising using the ‘Do Not Track’ protocol.</p>
 						
 		<p><strong>Advertising networks</strong></p>
 		<p>Most adverts shown on this site are hosted on Google's Doubleclick servers.  The cookies set by this service are outlined here: <a href="https://www.google.com/policies/privacy/ads/" target="_blank">http://www.google.com/policies/privacy/ads/</a></p>
@@ -207,11 +207,11 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
 		</ol>
 		<hr class="split">
 		<h3>Correct/Update</h3>
-		<p>Please e-mail <a href="/help.aspx">Mike Gove</a> if information previously provided is believed inaccurate or incorrect. Where membership schemes exist, automatic update mechanisms are provided for self-modification of registration details.</p>
+		<p>Please e-mail <a href="/help.aspx">Andrew Forth</a> if information previously provided is believed inaccurate or incorrect. Where membership schemes exist, automatic update mechanisms are provided for self-modification of registration details.</p>
 		<hr class="split">
 		<h3>Contacting the Web Site</h3>
 		<p>If you have any questions about this privacy statement, the practices of this site, or your dealings with this web site, you can contact:</p>
-		<p class="no-margin-bottom"><a href="/help.aspx">Mike Gove</a><br>
+		<p class="no-margin-bottom"><a href="/help.aspx">Andrew Forth</a><br>
 		Chief Operations Officer<br>
 		Aroq Ltd<br>
 		Aroq House<br>
@@ -317,7 +317,6 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
                                 <li><a href="/columns/the-launch-pad-product-launches_id673.aspx">Launches &amp; NPD</a></li>
                                 <li><a href="/sectors/marketing-advertising-promotions_id512">Marketing &amp; promotions</a></li>
                                 <li><a href="/hot-issues/">Hot issues</a></li>
-                                <li><a href="/the-just-drinks-blog">The just-drinks blog</a></li>
                                 <li><a href="/management-briefings/">Management briefings</a></li>
                                 <li><a href="/thought-leaders/">Thought Leaders</a></li>
 
@@ -328,7 +327,6 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
                         <li class="mobileOnly"><a href="/analysis/">Analysis</a></li>
                         <li class="mobileOnly"><a href="/comment/">Comment</a></li>
                         <li class="mobileOnly"><a href="/interview/">Interviews</a></li>
-                        <li class="mobileOnly"><a href="/the-just-drinks-blog">just-drinks blog</a></li>
                       
                         <li class="has-sub"><a href="/regions/">Regions</a>
                             <ul class="hide">
@@ -349,11 +347,11 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
 		
 		<li><a href="/companies/diageo_id1">Diageo</a></li>
 		
+		<li><a href="/companies/anheuser-busch-inbev_id9">Anheuser-Busch InBev</a></li>
+		
 		<li><a href="/companies/pernod-ricard_id6">Pernod Ricard</a></li>
 		
 		<li><a href="/companies/the-coca-cola-company_id256">The Coca-Cola Company</a></li>
-		
-		<li><a href="/companies/anheuser-busch-inbev_id9">Anheuser-Busch InBev</a></li>
 		
 		<li><a href="/companies/heineken_id10">Heineken</a></li>
 		
@@ -365,27 +363,27 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
 		
 		<li><a href="/companies/bacardi-ltd_id19">Bacardi Ltd</a></li>
 		
-		<li><a href="/companies/brown-forman_id5">Brown-Forman</a></li>
-		</ul><ul class="hide" style="float: left; margin-left: 190px;">
 		<li><a href="/companies/beam-suntory-inc_id366">Beam Suntory Inc</a></li>
-		
+		</ul><ul class="hide" style="float: left; margin-left: 190px;">
 		<li><a href="/companies/carlsberg_id11">Carlsberg</a></li>
-		
-		<li><a href="/companies/smirnoff_id67">Smirnoff</a></li>
-		
-		<li><a href="/companies/remy-cointreau_id43">Remy Cointreau</a></li>
-		
-		<li><a href="/companies/absolut_id83">Absolut</a></li>
 		
 		<li><a href="/companies/william-grant-sons_id87">William Grant &amp; Sons</a></li>
 		
-		<li><a href="/companies/johnnie-walker_id49">Johnnie Walker</a></li>
+		<li><a href="/companies/brown-forman_id5">Brown-Forman</a></li>
+		
+		<li><a href="/companies/absolut_id83">Absolut</a></li>
 		
 		<li><a href="/companies/gruppo-campari_id144">Gruppo Campari</a></li>
 		
-		<li><a href="/companies/the-edrington-group_id44">The Edrington Group</a></li>
+		<li><a href="/companies/jameson_id74">Jameson</a></li>
 		
-		<li><a href="/companies/sabmiller_id4">SABMiller</a></li><li class="last" style="width: 380px; margin-left: -190px;"><a href="/companies/" rel="nofollow">All companies</a></li></ul>
+		<li><a href="/companies/sabmiller_id4">SABMiller</a></li>
+		
+		<li><a href="/companies/treasury-wine-estates_id364">Treasury Wine Estates</a></li>
+		
+		<li><a href="/companies/smirnoff_id67">Smirnoff</a></li>
+		
+		<li><a href="/companies/remy-cointreau_id43">Remy Cointreau</a></li><li class="last" style="width: 380px; margin-left: -190px;"><a href="/companies/" rel="nofollow">All companies</a></li></ul>
                         </li>
                         <li class="has-sub"><a href="/sectors/">Sectors</a>
                             <ul class="hide">
@@ -394,6 +392,7 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
                                 <li><a href="/sectors/wine_id1">Wine</a></li>
                                 <li><a href="/sectors/soft-drinks_id8">Soft drinks</a></li>
                                 <li><a href="/sectors/water_id16">Water</a></li>
+                                <li><a href="/sectors/cannabis_id65536">Cannabis</a></li>
                                 <li class="last"><a href="/sectors/">All sectors</a></li>
                             </ul>
                         </li>
@@ -487,7 +486,6 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
 <span style="float: right;height:10px">
 <span class="facebook"><a style="text-decoration:none" href="https://www.facebook.com/justdrinkscom"><i style="width:30px;height:30px;font-size:1.4em;padding-top:0.35em;" class="fa fa-facebook socialicon"></i></a></span>
 <span class="twitter"><a style="text-decoration:none" href="https://twitter.com/just_drinks"><i style="width:30px;height:30px;font-size:1.4em;padding-top:0.35em;" class="fa fa-twitter socialicon"></i></a></span>
-<span class="googleplus"><a style="text-decoration:none" href="https://plus.google.com/108835312976826008652/posts"><i style="width:30px;height:30px;font-size:1.4em;padding-top:0.35em;" class="fa fa-google-plus socialicon"></i></a></span>
 </span>
 </p>
 <hr style="margin-left:20px;margin-right:20px">
@@ -513,10 +511,10 @@ ga('send', 'pageview', {'dimension3' : 'Anonymous', 'dimension4' : '0', 'dimensi
 	</div>
 	<div class="clearAll"></div>
 	<hr style="margin-left:20px;margin-right:20px">
-<p>©2018 All content copyright just-drinks.com<br>
-Published by Aroq Ltd. Address &amp; registered office: Aroq House, 17A Harris Business Park, Bromsgrove, Worcs, B60 4DJ, UK. 
+<p>©2019 All content copyright just-drinks.com<br>
+Published by Aroq Ltd. Address: Aroq House, 17A Harris Business Park, Bromsgrove, Worcs, B60 4DJ, UK. 
 Tel:  Intl +44 (0)1527 573 600. Toll Free from US: 1-866-545-5878. Fax: +44 (0)1527 577423.<br>
-Registered in England No:  4307068.</p>
+Registered Office: John Carpenter House, John Carpenter Street, London, EC4Y 0AN, UK | Registered in England No:  4307068.</p>
 <p>Aroq publishes <a href="https://www.just-auto.com">just-auto.com</a> | <a href="https://www.just-food.com">just-food.com</a> | <a href="https://www.just-drinks.com">just-drinks.com</a> | <a href="https://www.just-style.com">just-style.com</a></p>
 </div></div>
 <div id="inc_footer_inc_catfishInclude_pnlCatfishDisplay">
@@ -536,7 +534,7 @@ Registered in England No:  4307068.</p>
 			<div id="catfishEditorMsg">
 				<h2><strong style="text-decoration: underline;">A Message From The Editor</strong> <span id="hiddenClose" style="float: right; font-weight: normal;">[<a href="/membership/index.aspx" title="Close this area" onclick="catfishSlide(); return false;">x</a>]</span></h2>
 				<p>just-drinks gives you the widest beverage market coverage.</p>
-				<p>But only paid just-drinks members have full, unlimited access to all our exclusive content - including 20 years of archives.</p>
+				<p>But only paid just-drinks members have full, unlimited access to all our exclusive content - including 21 years of archives.</p>
 				<p>I am so confident you will love complete access to our content that today I can offer you <strong style="text-decoration: underline;">30 days access for $1.</strong></p>
 				<p>It’s our best ever membership offer – just for you.</p>
 				<p><img src="/images/catfish/editor-sig.gif" border="0" alt="Editor's signature"></p>
@@ -578,20 +576,6 @@ Registered in England No:  4307068.</p>
 <!--[if lt IE 9]><script src="/lib/js/css3-mediaqueries.min.js"></script><![endif]-->
 
 
-<script type="text/javascript">
-	adroll_adv_id = "VXUNJB7MKBCXNL7ZMS5VPW"; adroll_pix_id = "IAXQO44G5VED7HF7OXO25R";
-	(function () {
-		var oldonload = window.onload;
-		window.onload = function () {
-			__adroll_loaded = true;
-			var scr = document.createElement("script");
-			var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-			scr.setAttribute('async', 'true'); scr.type = "text/javascript"; scr.src = host + "/j/roundtrip.js";
-			((document.getElementsByTagName('head') || [null])[0] || document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-			if (oldonload) { oldonload() }
-		};
-	}());
-</script>
 
 
 <script type="text/javascript">
