botid.org (archived on 2019-06-07)
{
  "alexa_rank": 126701,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 7876,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.5,
  "homepage_snapshot_redirected_domain": "botid.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190330110152id_/http://www.botid.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190330110152id_/http%3A//botid.org",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "botid.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190607131730id_/http%3A//www.botid.org/PrivacyPolicy",
  "policy_title": "Privacy Policy of Best Of The Internet Directory (botid.org)",
  "policy_url": "botid.org/PrivacyPolicy",
  "sha1": "eaf38d3aacba9ffab10d21f5b88b7962129dff41",
  "simhash": 16057245869143693792,
  "simhash_updated": false,
  "site_hostname": "botid.org",
  "site_url": "http://botid.org",
  "smog": 15.99,
  "strict_updated": false,
  "timestamp": "20190607131730",
  "word_count": 1274,
  "year": 2019
}

--- a/b/bo/bot/botid.org.html
+++ b/b/bo/bot/botid.org.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the botid.org privacy policy that was archived on 2018-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181207035204id_/http%3A//botid.org/PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the botid.org privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607131730id_/http%3A//www.botid.org/PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy of  Best Of The Internet Directory (botid.org) </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="author" content="botid.org">
-<meta name="copyright" content="Copyright (c) 2012 by botid.org. All rights reserved!">
+<meta name="copyright" content="Copyright (c) 2019 by botid.org. All rights reserved!">
 <meta name="keywords" content="Add URL, Add site, Submit Site, Best of the Internet Directory"> 
 <meta name="description" content="Privacy Policy of  Best Of The Internet Directory (botid.org)  to the Best of the Internet Directory">
 
@@ -119,7 +119,7 @@ Changes to Privacy Policy: We reserve the right to amend or revise this privacy 
       <a href="/Editorial_Policy/">Editorial Policy</a></div>
       <div id="footer_wrapper">
   	    <div id="footer">
-  	2000--2013 All rights reserved  | <a href="/">botid.org Internet Directory Listing</a> | <a href="/SEOResources/">SEO Resources</a> <!-- |Site Map -->
+  	2000--2019 All rights reserved  | <a href="/">botid.org Internet Directory Listing</a> | <a href="/SEOResources/">SEO Resources</a> <!-- |Site Map -->
   	    </div>
       </div>
     </footer></div>
