--- a/m/mi/mil/milesfaster.co.uk.html
+++ b/m/mi/mil/milesfaster.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the milesfaster.co.uk privacy policy that was archived on 2017-03-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170302102036id_/https%3A//www.milesfaster.co.uk/information/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the milesfaster.co.uk privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607134500id_/https%3A//www.milesfaster.co.uk/information/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
@@ -17,8 +17,6 @@
 <div class="tabalsider">
 <span class="tabalsidec" style="width:16%;"><a href="../">Home</a></span>
 <span class="tabalsidec" style="width:24%;"><a href="../london-hotels-index.htm">London Hotels A-Z</a></span>
-<span class="tabalsidec" style="width:16%;"><a href="../united-kingdom-hotels-uk.htm">UK Hotels</a></span>
-<span class="tabalsidec" style="width:28%;"><a href="../ticket-hotel-packages.htm">Theatre/Packages/Offers</a></span>
 <span class="tabalsidec" style="width:16%;"><a href="../form/email-milesfaster.htm">Contact Us</a></span>
 </div>
 </nav>
@@ -44,13 +42,6 @@
 <a href="../london-boutique-hotels.htm">Boutique Hotels</a> 
 <a href="../london-hip-hotels.htm">Hip Hotels</a>
 <a href="../extra-occupancy.htm">Family Rooms (5+)</a><br>
-<div class="ra">DEALS</div>
-<a href="../supersavers.htm">Mystery Hotel Savers</a>
-<a href="../christmas-new-year-packages.htm">Christmas/ New Year Packages</a>
-<a href="../2-nights-dinner.htm">2 nights/ 1st+Dinner</a><br>
-<div class="ra">PACKAGES</div>
-<a href="../london-theatre-breaks.htm">London Theatre Breaks</a>
-<a href="../ticket-hotel-packages.htm">All Event Packages/ Offers</a><br>
 <div class="ra">AIRPORTS</div>
 <a href="../heathrow-hotels-london.htm">Heathrow Hotels</a>
 <a href="../gatwick-hotels-london.htm">Gatwick Hotels</a> 
@@ -61,7 +52,6 @@
 <a href="tripadvisor-top-london-hotels.htm">Tripadvisor Top 30</a>
 <a href="awards/">Award Winners</a><br>
 <div class="ra">ALSO..</div>
-<a href="../united-kingdom-hotels-uk.htm">UK Hotels</a>
 <a href="./">London Guide/ Pictures</a>
 </div>
 <div class="ppc" style="margin-left:200px;text-align:left;font-size:130%;padding:25px;">This is the website of
@@ -136,6 +126,6 @@ External links: At various points of our website we link out to external
 websites. Normally these are for information purposes. Our privacy 
 policy covers our website only and for external websites you should 
 check their individual privacy policy.</div><br>
-Copyright © 2002-2017 Milesfaster.co.uk All Rights Reserved</div>
+Copyright © 2002 Milesfaster.co.uk All Rights Reserved</div>
 
 </body></html>
