--- a/f/fr/fre/freeadvertisingforyou.com.html
+++ b/f/fr/fre/freeadvertisingforyou.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the freeadvertisingforyou.com privacy policy that was archived on 2018-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181229194659id_/http%3A//freeadvertisingforyou.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeadvertisingforyou.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607162126id_/http%3A//freeadvertisingforyou.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link rel="SHORTCUT ICON" href="/favicon.ico">
 <title>FreeAdvertisingForYou!  Free Traffic Exchange | Free Advertising Free Web Traffic</title>
 <meta name="keywords" content="Free Advertising, Free Ads, Free Advertising Sites, Free Online Advertising, Free Traffic">
-<meta name="description" content="We give you free advertising and the knowledge to use it correctly! 10+ Ways to promote your sites.">
+<meta name="description" content="10+ Ways To Promote Your Website For Free">
 <meta name="robots" content="FOLLOW,INDEX">
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
@@ -256,7 +256,7 @@ $(function centerPopup(){
   </tr>
   <tr>
 <td align="center" valign="top" background="../images/page-bg.jpg"><script type="text/javascript">
-var currenttime = 'December 29, 2018 14:46:58'
+var currenttime = 'June 07, 2019 12:21:25'
 var serverdate=new Date(currenttime)
 function padlength(what){
 var output=(what.toString().length==1)? "0"+what : what
@@ -379,12 +379,19 @@ div.pagination span.disabled {
 	
 		color: #DDD;
 	}
+	
+.vip {
+    width: 95%;
+    border: 1px solid black;
+    padding: 5px;
+  
+}
 </style>
 
 
 
 	<div id="banner1" style="height: 82px; text-align: center;">
-	<a href="http://freeadvertisingforyou.com/bannerclick.php?id=32410&amp;code=yWYmuzE6" target="_blank"><img src="http://globalhits2u.com/getimg.php?id=2" border="0"></a><br><br><a href="http://freeadvertisingforyou.com/textlinkclick.php?id=31609&amp;code=Ma7y5Y3E" target="_blank"><u><font face="Tahoma" size="2">Use,Grow Up And Earn Up Marketing!</font></u></a>	</div>
+	<a href="http://freeadvertisingforyou.com/bannerclick.php?id=35691&amp;code=MUqyDYbY" target="_blank"><img src="https://cdn.somanyhits.com/b/468x60-2.gif" border="0"></a><br><br>	</div>
 <br>
 	
 
@@ -523,7 +530,7 @@ a:active {
   </p><table width="500"><tbody><tr><td><span class="style1">FreeAdvertisingForYou is not a multi-level marketing scheme or a get-rich-quick program, we are purely an advertising platform. We don't require you to have a website or sell any product to use our service. We do not require you to refer anyone to our site to use our service. You won't get rich by using our internet advertising program. This website uses cookies. Being a member and/or continued use of this website indicates that you accept our cookies policy. Thank you, we very much appreciate your support and being a member on our site!</span><p></p></td></tr></tbody></table>
 <p class="style5"><a href="/terms.php" target="_blank&quot;">Terms and Conditions</a> | <a href="/earnings.php" target="_blank&quot;">Earnings Disclaimer</a> | <a href="/spam.php" target="_blank&quot;">Spam Policy</a> | <a href="/privacy.php" target="_blank&quot;">Privacy Policy</a></p>
 <p class="style5"> <span class="style1">© Copyright 2017 </span><span class="style4">- FreeAdvertisingForYou </span><br>
-</p><p>Current Server Time: <span id="servertime">14:46:58</span></p>
+</p><p>Current Server Time: <span id="servertime">12:21:25</span></p>
 </td></tr><tr>
     <td align="center" valign="top" bgcolor="#E8E8E8" class="style5"><img src="../images/footer.jpg" border="0"></td>
 </tr>
@@ -539,4 +546,6 @@ a:active {
   gtag('js', new Date());
 
   gtag('config', 'UA-101145293-1');
-</script></body></html>
+</script>
+
+<a rel="nofollow" style="display:none;" href="http://freeadvertisingforyou.com/blackhole/">Do NOT follow this link or you will be banned from the site!</a></body></html>
