inaani.com (archived on 2019-06-07)
{
  "alexa_rank": 160421,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3683,
  "classifier_probability": 0.79,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.16,
  "homepage_snapshot_redirected_domain": "inaani.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190322162654id_/https://www.inaani.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190322162654id_/http%3A//inaani.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "inaani.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190607190014id_/https%3A//www.inaani.com/privacy-policy",
  "policy_title": "WholeSale VoIP Provider|VoIP Termination|voip Gateway \u2013 Inaani",
  "policy_url": "inaani.com/privacy-policy",
  "sha1": "13974ccddbbc25af0734f9ac5e9b3152c99f789a",
  "simhash": 18251020090329212087,
  "simhash_updated": true,
  "site_hostname": "inaani.com",
  "site_url": "http://inaani.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20190607190014",
  "word_count": 541,
  "year": 2019
}

--- a/i/in/ina/inaani.com.html
+++ b/i/in/ina/inaani.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the inaani.com privacy policy that was archived on 2018-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181220102352id_/https%3A//www.inaani.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inaani.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607190014id_/https%3A//www.inaani.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
@@ -12,9 +12,15 @@
 <link href="https://www.inaani.com/cdn/assets/css/bootstrap.css" type="text/css" media="screen" rel="stylesheet">
 <link href="https://www.inaani.com/cdn/assets/css/layout.css" rel="stylesheet" media="screen" type="text/css">
 <link href="https://www.inaani.com/cdn/assets/css/responsive.css" rel="stylesheet" media="screen" type="text/css">
+
+
+<script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5W2P9K"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" charset="utf-8" src="https://static.revechat.com/widget/scripts/new-livechat.js?1580517176222"></script><script type="text/javascript" src="https://www.inaani.com/cdn/assets/js/1.11.3_jquery.min.js"></script>  
+<script type="text/javascript" src="https://www.inaani.com/cdn/assets/js/bootstrap.min.js"></script> 
+
+<script type="text/javascript" src="https://www.inaani.com/cdn/assets/js/jquery-2.0.3.js"></script>
 <!--FontS-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
-<script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5W2P9K"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" charset="utf-8" src="https://static.revechat.com/widget/scripts/new-livechat.js?1580517177042"></script><script type="text/javascript">
+<script type="text/javascript">
     var SITE_URL = "https://www.inaani.com/";
     var BASE_URL = "https://www.inaani.com/";
 </script>
@@ -115,7 +121,7 @@
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <p class="font7">Register Now!</p>
                                                 <form class="form-horizontal qc-form-submit" id="lg-modal-form" role="form" name="" action="" method="POST">
-                            <input value="rQPGsCo2FbvHacJzehUm" name="randomString" type="hidden" class="randomCode">
+                            <input value="I8XcBkMjbaxP2FoU7AQf" name="randomString" type="hidden" class="randomCode">
                             <div class="form-group">
                                 <div class="col-sm-12">
                                     <input type="text" name="name" value="" class="form-control inpt required" placeholder="Name*" required="">
@@ -679,7 +685,7 @@ a.appendChild(r);
 <div class="copyright">
     <div class="container">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 align-center">
-            <p>©  Copyright 2018, Inaani Pte. Ltd. All right reserved.</p>
+            <p>©  Copyright 2019, Inaani Pte. Ltd. All right reserved.</p>
         </div>
     </div>
 </div> 
